# LearningProjects_Alten

./: .gitignore  README.md
AdaptiveAutosarTraining/: CMakeLists.txt
AdaptiveAutosarTraining/Employee/: CMakeLists.txt  EmployeeBase.cpp  EmployeeBase.h  EmployeeMain.cpp  FirstNameLastNameTest.cpp  NegativeSalaryTest.cpp
HelloWorldWithCMake/: CMakeLists.txt  HelloWorld.cpp
